# bevy_save_planets

./: Cargo.toml  README.md
assets/: moon.glb  planet.glb  star.glb
src/: main.rs  save.rs
