[package]
name = "bevy_save_planets"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"

bevy_save = {version ="0.18.1" ,features = ["bevy_asset"]}


bevy-inspector-egui = { version = "0.31.0", features = ["highlight_changes"] }
serde = { version = "1.0.219", features = ["derive"] }
ron = "0.10.1"
io-adapters = "0.4.0"
